crates/tmark-writers/tests/snapshots/fixtures__container-tabs@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<div class="tabbed-set">
<div class="tabbed-labels"><label>Windows</label><label>Linux</label></div>
<div class="tabbed-content">
<div class="tabbed-block">
<p>Windows is a Microsoft operating system.</p>
</div>
<div class="tabbed-block">
<p>Linux is an open-source operating system.</p>
</div>
</div>
</div>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
