crates/tmark-writers/tests/snapshots/fixtures__container-unknown@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<div class="gadget">
<p>Body.</p>
</div>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
