crates/tmark-writers/tests/snapshots/fixtures__counter-item@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\leavevmode\phantomsection\label{fw:boot-loop}FW-01 The firmware reboots when the watchdog fires.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": [
    "fw"
  ]
}
