crates/tmark-writers/tests/snapshots/fixtures__counter-item@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
FW-01<fw:boot-loop> The firmware reboots when the watchdog fires.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": [
    "fw"
  ]
}
